// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div>
  Highlight 
  hidden
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div>
  Highlight 
  hidden
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div>
  Highlight 
  hidden
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div>
  Highlight 
  unavailable
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div>
  Highlight 
  visible
</div>
`;
